--- a/KI207-projekat/src/main/resources/application.properties
+++ b/KI207-projekat/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.mvc.view.prefix=/src/main/resources/
+spring.mvc.view.suffix=.html
+
 # ===============================
 # = DATA SOURCE
 # ===============================
